Rebrand to Creative Portfolio Concept - Update project name, README, and refactor components

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spotify-album-viewer",
+  "name": "creative-portfolio-concept",
   "version": "0.1.0",
   "private": true,
   "scripts": {
